1998-10-31  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* g++.old-deja/g++.ext/arrnew2.C: if new T[n](i) is accepted for
	classes, it should be accepted for all types.

	* g++.old-deja/g++.eh/sjlj1.C: test checked sjlj-exception

	* g++.old-deja/g++.pt/spec24.C: ensure that template
	specializations start with template headers

1998-10-29  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* g++.old-deja/g++.other/dcast2.C: cannot dynamic downcast &x

	* g++.old-deja/g++.other/init9.C: test cross initialization of
	non-POD types

1998-10-27  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* lib/old-dejagnu.exp (old-dejagnu): document `Additional sources'

Thu Oct 22 16:01:44 1998  Andreas Schwab <schwab@issan.informatik.uni-dortmund.de>

	* compile/981022-1.c, compile/981022-1.x: New test and driver.

Mon Oct 19 14:03:07 1998  Jeffrey A Law  (law@cygnus.com)

	* 981019-1.c: New test.

Wed Oct 14 21:11:19 1998  Robert Lipe <robertl@dgii.com>

	* lib/objc-torture.exp (objc-torture-execute): Add -I so we can
 	find objc headers.

1998-10-14  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>

	* compile/981001-4.c: Remove use of GCC extension that triggers a
	compiler bug.

1998-10-13  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* lib/old-dejagnu.exp (old-dejagnu): support `Additional sources:'

1998-10-12  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* g++.old-deja/g++.pt/explicit74.C: New test.  Explicit
 	instantiation of template produces incorrect code for delete
 	expression.

	* g++.old-deja/g++.pt/instantiate5.C: New test.  `global
	constructors' name is not unique
	* g++.old-deja/g++.pt/instantiate5.cc: ditto
	* g++.old-deja/g++.pt/instantiate5-main.cc: ditto

	* g++.old-deja/g++.other/init8.C: New test.  uninitialized
 	automatic array of const is ill-formed

	* g++.old-deja/g++.pt/ttp53.C: New test.  incorrect substitution
	of template parameter?

	* g++.old-deja/g++.other/conv3.C: New test.  conversion discards
	const

	* g++.old-deja/g++.other/pmf2.C: New test.  invalid